--- a/package.json
+++ b/package.json
@@ -38,7 +38,8 @@
     "lint-staged": {
         "*.js": [
             "prettier --write",
-            "eslint"
+            "eslint",
+            "git add"
         ]
     },
     "prettier": {
