Added logo component

--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
 		"react-dom": "^16.0.0",
 		"react-hot-loader": "^4.0.0-beta.21",
 		"react-router": "^4.2.0",
-		"react-static": "^5.9.12"
+		"react-static": "^5.9.12",
+		"styled-components": "^4.0.3"
 	},
 	"devDependencies": {
 		"eslint-config-react-tools": "1.x.x",
