--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
         "styled-components": "^4.0.3"
     },
     "devDependencies": {
+        "babel-eslint": "^10.0.1",
         "eslint": "^5.8.0",
         "eslint-config-react-tools": "1.x.x",
         "husky": "^1.1.3",
