--- a/.travis.yml
+++ b/.travis.yml
@@ -7,6 +7,9 @@ install:
   - yarn install
 script:
   - yarn build
+branches:
+  only:
+  - master
 deploy:
   provider: pages
   skip-cleanup: true
@@ -14,5 +17,3 @@ deploy:
   keep-history: true
   local_dir: dist
   default_text_charset: "utf-8"
-  on:
-    branch: master
