--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     },
     "lint-staged": {
         "*.js": [
+            "prettier --write",
             "eslint",
             "git add"
         ]
@@ -46,6 +47,7 @@
         "trailingComma": "es5",
         "tabWidth": 2,
         "semi": false,
-        "singleQuote": true
+        "singleQuote": true,
+        "spaceBeforeFunctionParen": true
     }
 }
