Fixed bugsnag, path resolve and analytics

--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
         "eslint": "eslint src"
     },
     "dependencies": {
+        "bugsnag-js": "^4.7.3",
+        "bugsnag-react": "^1.1.1",
         "chokidar": "2.0.3",
         "htmr": "0.6.3",
         "jdown": "^0.3.0",
@@ -19,6 +21,7 @@
         "react-dom": "^16.0.0",
         "react-hot-loader": "^4.0.0-beta.21",
         "react-router": "^4.2.0",
+        "react-simple-img": "^1.4.5",
         "react-static": "^5.9.12",
         "styled-components": "^4.0.3"
     },
@@ -38,7 +41,6 @@
     },
     "lint-staged": {
         "*.js": [
-            "prettier --write",
             "eslint",
             "git add"
         ]
