--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     },
     "dependencies": {
         "chokidar": "2.0.3",
+        "cloudinary-react": "^1.0.6",
         "htmr": "0.6.3",
         "jdown": "^0.3.0",
         "react": "^16.0.0",
