Minor content tweaks

--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
         "htmr": "0.6.3",
         "jdown": "^0.3.0",
         "react": "^16.0.0",
+        "react-bulma-components": "^2.3.0",
         "react-dom": "^16.0.0",
         "react-hot-loader": "^4.0.0-beta.21",
         "react-router": "^4.2.0",
