Added Sal for animation

--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
         "react-router": "^4.2.0",
         "react-simple-img": "^1.4.5",
         "react-static": "^5.9.12",
+        "sal.js": "^0.5.0",
         "styled-components": "^4.0.3"
     },
     "devDependencies": {
