--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
         "react-bulma-components": "^2.3.0",
         "react-dom": "^16.0.0",
         "react-hot-loader": "^4.0.0-beta.21",
+        "react-pose": "^4.0.2",
         "react-router": "^4.2.0",
         "react-simple-img": "^1.4.5",
         "react-static": "^5.9.12",
